tests/Should_succeed/5_Functions/03_MethodVarArg.decaf
class Test {
	void m1(int a){
		WriteString("0=0");
		WriteString("\n");
		WriteInt(a);
		WriteString("=42");
		WriteString("\n");
	}
	void main(){
		int b;
		b = 42;
		m1(b);
	}
}